update otomad feature